<resources>
    <string name="app_name">TipCalculator</string>

    <string name="Bill_Amount_label">Bill Amount</string>
    <string name="bill_amount">34.60</string>

    <string name="percent_label">Percent</string>
    <string name="tip_percent">15%</string>
    <string name="decrease">-</string>
    <string name="increase">+</string>

    <string name="tip_amount_label">Tip</string>
    <string name="tip_amount">$0.00</string>

    <string name="total_amount_label">Total</string>
    <string name="total_text_view">$00.00</string>
    <string name="title_activity_tip_calculator">Activity Tip Calculator</string>
</resources>
