<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.dfusari5799.tipcalculator.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Bill_Amount_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.091" />

    <EditText
        android:id="@+id/billAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="5"
        android:inputType="numberDecimal"
        android:text="@string/bill_amount"
        tools:layout_editor_absoluteX="125dp"
        tools:layout_editor_absoluteY="34dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="29dp"
        app:layout_constraintRight_toRightOf="@+id/percentUpButton"
        android:layout_marginTop="34dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="29dp" />

    <TextView
        android:id="@+id/percentLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/percent_label"
        android:layout_marginStart="16dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/percentTextView"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp" />

    <TextView
        android:id="@+id/percentTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tip_percent"
        app:layout_constraintRight_toLeftOf="@+id/percentUpButton"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/percentUpButton"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="15dp"
        android:layout_marginRight="38dp" />

    <Button
        android:id="@+id/percentDownButton"
        android:layout_width="88dp"
        android:layout_height="48dp"
        android:text="@string/decrease"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="42dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/percentUpButton"
        tools:layout_constraintBaseline_creator="1"
        android:layout_marginRight="45dp" />

    <Button
        android:id="@+id/percentUpButton"
        android:layout_width="88dp"
        android:layout_height="48dp"
        android:text="@string/increase"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="80dp"
        app:layout_constraintRight_toRightOf="@+id/percentDownButton"
        android:layout_marginTop="27dp"
        app:layout_constraintTop_toBottomOf="@+id/billAmount"
        android:layout_marginRight="80dp" />

    <TextView
        android:id="@+id/tipLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tip_amount_label"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/tipTextView"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tipTextView"
        android:layout_marginLeft="16dp" />

    <TextView
        android:id="@+id/tipTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tip_amount"
        app:layout_constraintRight_toLeftOf="@+id/percentUpButton"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="29dp"
        android:layout_marginTop="28dp"
        app:layout_constraintTop_toBottomOf="@+id/percentUpButton"
        android:layout_marginRight="29dp" />

    <TextView
        android:id="@+id/totalLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_amount_label"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="16dp"
        android:layout_marginTop="33dp"
        app:layout_constraintTop_toBottomOf="@+id/tipLabel"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp" />

    <TextView
        android:id="@+id/totalTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_text_view"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="33dp"
        app:layout_constraintTop_toBottomOf="@+id/tipTextView"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/tipTextView" />


</android.support.constraint.ConstraintLayout>
